[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/QuitButton.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 1
text = "In Finite Runner
Main Menu"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MenuItems" type="VBoxContainer" parent="CenterContainer"]
margin_left = 470.0
margin_top = 275.0
margin_right = 553.0
margin_bottom = 325.0
custom_constants/separation = 10

[node name="StartButton" type="Button" parent="CenterContainer/MenuItems"]
margin_right = 83.0
margin_bottom = 20.0
text = "Start Game"

[node name="QuitButton" parent="CenterContainer/MenuItems" instance=ExtResource( 2 )]

[connection signal="pressed" from="CenterContainer/MenuItems/StartButton" to="." method="_on_StartButton_pressed"]
